@@ -128,6 +128,7 @@ Raven (Free Play)
 Raven (German)
 Raven (German Free Play)
 Raven (rev. 1 Free Play)
+Road Show (Prototype P-3 Sound ROM, combined with LX-2 Game ROM for now)
 Robo-War (Free Play)
 Robo-War (French)
 Robo-War (French Free Play)
